<resources>
    <string name="app_name">Dastarhan</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_favorite">FavoriteActivity</string>
    <string name="title_activity_current_restaurant">CurrentRestaurantActivity</string>
    <string name="title_activity_current_food">CurrentFoodActivity</string>
    <string name="title_activity_restaurants">Restaurants</string>
    <string name="title_activity_food">FoodActivity</string>
    <string name="title_activity_login">Authorization</string>

    <string name="action_settings">Settings</string>
    <string name="search">Search</string>
    <string name="all_cuisines">All cuisines</string>
    <string name="all_restaurants">All restaurants</string>
    <string name="recommended">Recommended</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="basket">Shopping cart</string>
    <string name="history_of_orders">History of orders</string>
    <string name="promo">Promo</string>
    <string name="info">Info</string>
    <string name="price">Price:</string>
    <string name="food_not_found">Sorry, but this food not found in Database</string>
    <string name="rest_not_found">Sorry, but this restaurant not found in Database</string>
    <string name="to_order">To order</string>
    <string name="open_hours">Open hours:</string>
    <string name="schedule">Schedule:</string>
    <string name="tel">Phone number:</string>
    <string name="order_tel">Order phone numder:</string>
    <string name="email">Email:</string>
    <string name="payment_method">Payment method:</string>
    <string name="login">Log in</string>
    <string name="skip">Skip</string>
    <string name="login_email">Email</string>
    <string name="login_pass">Password</string>
    <string name="login_sign_up">Sign up?</string>
    <string name="login_remind">Remind?</string>
    <string name="enter_or_skip">Please input email and password or press Skip</string>
    <string name="is_need_remember">Remember your credentials?</string>
    <string name="title_activity_promo">PromoActivity</string>
    <string name="cant_order">Already in the cart!</string>
    <string name="add_to_cart">Adding to the shopping cart…</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="adding_address">Checking address</string>
    <string name="cost_full">Сost: 0.00 rub</string>
    <string name="cost">Cost:</string>
    <string name="currency">rub</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="check_address">Check address</string>
    <string name="send_order">Send order</string>
    <string name="title_activity_setting">SettingActivity</string>

    <!--promo-->
    <string name="discount_all">%1$s discount on all meals of the restaurant</string>
    <string name="discount">Discount</string>
    <string name="meal_for_gift">Free food</string>
    <string name="free_delivery">Free delivery</string>
    <string name="hidden">Hidden</string>
    <string name="afflicted_all_order">All the food in order</string>
    <string name="afflicted_to">The promo applies to:</string>
    <string name="afflicted_to_and">The promo applies to dishes:</string>
    <string name="afflicted_to_or">The promo applies to one of the dishes:</string>

    <string name="day_1">Mon.</string>
    <string name="day_2">Tue.</string>
    <string name="day_3">Wed.</string>
    <string name="day_4">Thu.</string>
    <string name="day_5">Fri.</string>
    <string name="day_6">Sat.</string>
    <string name="day_7">Sun.</string>

    <string name="around_the_clock">around the clock</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="every_day">every day</string>
    <string name="see_all">See all</string>

    <!--settings-->
    <string name="add_your_address">Add address</string>
    <string name="authorize">Log in</string>
    <string name="deauthorize">Log out</string>

    <string name="no_inet">No internet connection</string>
    <string name="user_not_exists">This user is not exists</string>
    <string name="user_already_exists">This user already exists</string>
    <string name="auth_error">Authorization error</string>
    <string name="signup_error">Sign up error</string>
    <string name="registration">Sigh up</string>
    <string name="please_rate_restaurant">Please rate the restaurant</string>
    <string name="vote">Vote</string>

    <string name="city">City</string>
    <string name="distr">District/Street</string>
    <string name="exact_addr">The exact address</string>
    <string name="submit">Submit</string>
    <string name="notice_addr">Notice (e.g. phone number)</string>
    <string name="apartment">Apartment</string>
    <string name="house_num">House</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="need_enter_phone_number">Enter your phone number</string>
    <string name="need_choose_city">Choose your city</string>
    <string name="need_choose_district">Choose your district</string>
    <string name="need_choose_street">Choose your street</string>
    <string name="need_enter_house_num">Enter house number</string>
    <string name="address_book_is_loading">Address book is loading…</string>
    <string name="enter_your_contact_info">Enter your contact information:</string>
    <string name="label_username">name</string>
    <string name="label_user_phone">phone</string>
    <string name="label_user_city">city</string>
    <string name="district">district</string>
    <string name="street">street</string>
    <string name="house">house</string>
    <string name="building">building</string>
    <string name="apartment_office">apartment/office</string>
    <string name="porch">porch</string>
    <string name="floor">floor</string>
    <string name="intercom_code">intercom code</string>
    <string name="additionally">Additionally</string>
    <string name="need_change_from">need change from</string>
    <string name="notice">notice</string>
    <string name="delivery_address">Delivery address:</string>
    <string name="Geolocation_is_unavailable">Geolocation is unavailable</string>
    <string name="can_not_load_adress_book">Can\'t load address book</string>
    <string name="delivery_time">Delivery time:</string>
    <string name="delivery_cost">Delivery cost:</string>
    <string name="delivery_total_cost">Total cost:</string>
    <string name="need_add_for_delivery1">"For delivery must be supplemented by an order in the "</string>
    <string name="need_add_for_delivery2">" in the amount of "</string>

</resources>
