<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_action_menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_action_favorites"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_action_bucket"
            android:title="@string/basket" />
        <item
            android:id="@+id/nav_action_history"
            android:title="@string/history_of_orders" />
        <item
            android:id="@+id/nav_action_promo"
            android:title="@string/promo" />
        <item
            android:id="@+id/nav_action_settings"
            android:title="@string/action_settings" />
        <item
            android:id="@+id/nav_action_info"
            android:title="@string/info" />
    </group>

</menu>
