<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CurrentRestaurantFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:id="@+id/rlCurrRestMainBlock"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/ivCurrRestImage"
            android:background="@drawable/def_restaurant" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Restaurant name"
            android:id="@+id/tvCurrRestName"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ivCurrRestImage"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_toLeftOf="@+id/ivCurrRestVegan"
            android:layout_toStartOf="@+id/ivCurrRestVegan" />

        <TextView
            android:id="@+id/tvRestaurantCuisines"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvCurrRestName"
            android:layout_alignStart="@+id/tvCurrRestName"
            android:layout_below="@+id/tvCurrRestName"
            android:singleLine="true"
            android:text="Cuisines"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:layout_toLeftOf="@+id/ivCurrRestVegan"
            android:layout_toStartOf="@+id/ivCurrRestVegan"
            android:layout_marginBottom="4dp" />

        <ImageView
            android:layout_width="110dp"
            android:layout_height="20dp"
            android:id="@+id/ivCurrRestRating"
            android:background="@drawable/rating_5"
            android:layout_below="@+id/tvRestaurantCuisines"
            android:layout_alignLeft="@+id/tvRestaurantCuisines"
            android:layout_alignStart="@+id/tvRestaurantCuisines" />

        <ImageView
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:id="@+id/ivCurrRestVegan"
            android:background="@drawable/vegan"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="Отзывов:"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:layout_toRightOf="@+id/ivCurrRestRating"
            android:layout_alignBottom="@+id/ivCurrRestRating" />

        <TextView
            android:id="@+id/tvCurrRestRecomendationCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp"
            android:layout_alignBottom="@+id/textView5"
            android:layout_toRightOf="@+id/textView5"
            android:layout_toLeftOf="@+id/ivCurrRestVegan"
            android:layout_toStartOf="@+id/ivCurrRestVegan"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp" />
    </RelativeLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlCurrRestMainBlock"
        android:id="@+id/flCurrRestInfo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/background_shape_mask"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingRight="8dp"
        android:paddingLeft="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvCurrRestInfoBlock">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/open_hours"
                    android:id="@+id/tvCurrRestInfoTime" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestTime"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoTime" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/schedule"
                    android:id="@+id/tvCurrRestInfoSchedule"
                    android:layout_below="@+id/tvCurrRestTime"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestSchedule"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoSchedule"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/tel"
                    android:id="@+id/tvCurrRestInfoTel"
                    android:layout_below="@+id/tvCurrRestSchedule"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestTel"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoTel"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_below="@+id/tvCurrRestTel"
                    android:text="@string/order_tel"
                    android:id="@+id/tvCurrRestInfoTelOrder" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestTelOrder"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoTelOrder"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_below="@+id/tvCurrRestTelOrder"
                    android:text="@string/email"
                    android:id="@+id/tvCurrRestInfoEmail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestEmail"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoEmail"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_below="@+id/tvCurrRestEmail"
                    android:text="@string/payment_method"
                    android:id="@+id/tvCurrRestInfoPayment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text=""
                    android:id="@+id/tvCurrRestPayment"
                    android:layout_marginLeft="24dp"
                    android:layout_below="@+id/tvCurrRestInfoPayment"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Description"
                    android:id="@+id/tvCurrRestDesrc"
                    android:layout_marginTop="12dp"
                    android:layout_below="@+id/tvCurrRestPayment"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"/>

            </RelativeLayout>
        </ScrollView>

    </FrameLayout>

    <TextView
        android:id="@+id/tvCurrRestNotFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/rest_not_found"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

</RelativeLayout>
